# mnasm

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md  grammar.txt  proc_macro.txt  testsasa
analyzer/: Cargo.toml
analyzer/src/: analyze.rs  analyze_block.rs  analyze_label.rs  analyze_stmt.rs  lib.rs
codegen/: Cargo.toml
codegen/src/: codegen_block.rs  codegen_code.rs  codegen_label_def.rs  codegen_stmt.rs  lib.rs
crates/analyzer/src/: analyze.rs  lib.rs
crates/codegen/: Cargo.toml
crates/data/: Cargo.toml
crates/dsl/: Cargo.toml
crates/expander/: Cargo.toml
crates/new_data/: ast.rs
crates/parser/: Cargo.toml
crates/tokenizer/: Cargo.toml
data/src/: block.rs  code.rs  compound_ins.rs  ins.rs  label_def.rs  lib.rs  stmt.rs
idea/: ex1.s  ex2.s  ex3.s  ex4_abs.s  ex5_macro.s  idea-memo.txt
parser/: Cargo.toml
parser/src/: block.rs  code.rs  indent.rs  ins.rs  label_def.rs  lib.rs  null_stmt.rs  parse_block.rs  parse_code.rs  parse_fn_like_macro.rs  parse_indent.rs  parse_ins.rs  parse_label.rs  parse_label_def.rs  parse_macro_def.rs  parse_null_stmt.rs  parse_operands.rs  parse_pseudo_ins.rs  parse_stmt.rs  stmt.rs  tokenizer.rs
src/: main.rs
test/: start.s  t1.s  t10-re.s  t10.s  t11.s  t12.s  t13.s  t14.s  t15.s  t16.s  t17.s  t18.s  t2.s  t3.s  t4.s  t5.s  t7.s  t8.s  t9.s  test-5cc.sh
test/fizzbuzz/: 5cc.sh  fizzbuzz  fizzbuzz.asm  fizzbuzz.c  fizzbuzz.s
tokenizer/: Cargo.toml
tokenizer/src/: lib.rs  location.rs  macro_related.rs  token.rs  tokenizer.rs  tokenizer2.rs
util/src/: error.rs  lib.rs  location.rs
(+119 files in other folders)
