[package]
name = "mnasm"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "analyzer", "codegen", "data", "parser","tokenizer", "util"]


[dependencies]
tokenizer = { path = "./tokenizer"}
util = { path = "./util"}
parser = {path = "./parser"}
codegen = {path = "./codegen"}
data = {path = "./data"}
