[package]
name = "mnasm"
version = "0.1.0"
edition = "2021"




[dependencies]
tokenizer = { path = "./crates/tokenizer"}
util = { path = "./crates/util"}
parser = {path = "./crates/parser"}
codegen = {path = "./crates/codegen"}
data = {path = "./crates/data"}
dsl = {path = "./crates/dsl"}
analyzer = {path = "./crates/analyzer"}
tempfile = "3.14.0"
backtrace-on-stack-overflow = "0.3.0"
